--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -32,6 +33,7 @@
     "workbox-streams": "^5.1.4"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.3",
     "gh-pages": "^3.2.3",
     "sass": "^1.45.0"
   },
